<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Letter Better</string>
    <string name="app_id">288267970579</string>
    <string name="title_activity_facebook_login">FacebookLoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="loading">Loading...</string>
    <string name="score">Score:</string>
    <string name="time">Time:</string>
    <string name="submitted_words">Submitted Words:</string>
    <string name="pause">Pause</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="game_over">Game Over!</string>
    <string name="main_menu">Main Menu</string>
    <string name="high_score">High Score:</string>
    <string name="new_high_score">New High Score!</string>
    <string name="copyright">Copyright Cor31</string>
    <string name="game_paused">Game Paused</string>
    <string name="resume">Resume</string>
    <string name="share">Share</string>
    <string name="multiplayer_invite">Multiplayer - Invite</string>
    <string name="multiplayer_random">Multiplayer - Random</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="invitations">Invitations</string>
    <string name="singleplayer">Singleplayer Game</string>
    <string name="invitationMessage">has invited you to play. What would you like to do?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="invitation_received">Invitation Received</string>
    <string name="sign_out">Sign Out</string>
    <string name="leaderboard_singleplayer_standard">CgkIk9Dw8LEIEAIQAw</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="achievement_beginner">CgkIk9Dw8LEIEAIQBQ</string>
    <string name="achievement_wordsmith">CgkIk9Dw8LEIEAIQBA</string>
    <string name="achievement_dedicated">CgkIk9Dw8LEIEAIQBg</string>
    <string name="achievement_investor">CgkIk9Dw8LEIEAIQBw</string>
    <string name="achievement_winner_winner">CgkIk9Dw8LEIEAIQCA</string>
    <string name="achievement_chicken_dinner">CgkIk9Dw8LEIEAIQCQ</string>
    <string name="leaderboard_singleplayer__standard">CgkIk9Dw8LEIEAIQAw</string>
    <string name="achievements">Achievements</string>
    <string name="letter_shop">Letter Shop</string>
    <string name="letters_in_bank">Letters in bank: </string>
    <string name="title_activity_letter_shop">LetterShopActivity</string>
	<string name="powerups">Power Ups</string>
	<string name="powerup_swap">Swap</string>
	<string name="powerup_time">Time</string>
	<string name="powerup_shuffle">Shuffle</string>
	<string name="powerup_vowel">Vowel</string>
	<string name="powerup_swap_error_singleplayer">The Letter Swap powerup costs 1 letter. You cannot afford this.</string>
	<string name="powerup_time_error_singleplayer">The Time Increase powerup costs 1 letter. You cannot afford this.</string>
	<string name="powerup_shuffle_error_singleplayer">The Board Shuffle powerup costs 3 letter. You cannot afford this.</string>
	<string name="powerup_vowel_error_singleplayer">The Buy A Vowel powerup costs 2 letter. You cannot afford this.</string>
	<string name="powerup_swap_error_multiplayer">The Letter Swap powerup costs 2 letter. You cannot afford this.</string>
	<string name="powerup_time_error_multiplayer">The Time Increase powerup costs 2 letter. You cannot afford this.</string>
	<string name="powerup_shuffle_error_multiplayer">The Board Shuffle powerup costs 4 letter. You cannot afford this.</string>
	<string name="powerup_vowel_error_multiplayer">The Buy A Vowel powerup costs 3 letter. You cannot afford this.</string>
	<string name="letters_earned">letters earned!</string>
	<string name="powerup_swap_instructions">Drag and drop to swap two tiles.</string>
	<string name="bank">Bank:</string>
	<string name="pick_a_vowel">Pick a vowel</string>
	<string name="cancel">Cancel</string>
	<string name="choose_letter_to_swap_with_vowel">Choose a letter tile to switch to</string>
	<string name="game_creation_error">Error occurred while creating multiplayer game.</string>
	<string name="status_network_error_no_data_msg">Unable to retrieve data due to network connection. Check your internet connection.</string>
	<string name="status_network_error_stale_data_msg">Unable to update game data due to network connection. Check your internet connection.</string>
	<string name="status_match_not_found_msg">Could not find selected match.</string>
	<string name="status_client_reconnect_required_msg">Reconnect to Google Play required.</string>
	<string name="status_internal_error_msg">Unknown error occurred with Google Play.</string>
	<string name="turn_based_sent">A Letter Better challenge has been sent to </string>
	<string name="creating_match">Creating multiplayer match.</string>
	<string name="please_wait">Please wait</string>
    <string name="status_multiplayer_error_not_trusted_tester">Not trusted tester</string>
    <string name="match_error_already_rematched">Already rematched</string>
    <string name="network_error_operation_failed">Operation failed</string>
    <string name="client_reconnect_required">Client reconnect required</string>
    <string name="internal_error">Internal error</string>
    <string name="match_error_inactive_match">Inactive match</string>
    <string name="match_error_locally_modified">Locally modified</string>
    <string name="unexpected_status">Unexpected error occurred</string>
    <string name="how_many_letters_to_bet">How many letters do you want to bet?</string>
    <string name="letters_bet">Number of letters bet:</string>
    <string name="letters_won_this_game">letters won this game!</string>
    <string name="error_loading_game_data">Error retrieving game data.</string>
    <string name="lost_match">You lost this match.</string>
    <string name="won_match_collected">You won this match and already collected the spoils!</string>
    <string name="won_match_uncollected">You won this match! You have banked the following amount of letters:</string>
    <string name="you_win">You win!</string>
    <string name="you_lose">You lose.</string>
    <string name="game_is_draw">The game is a draw.</string>
    <string name="multiplayer_game">Multi-player Game</string>
</resources>
