<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_fragment"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textLetterCountLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/black"
        android:text="@string/letters_in_bank"
        android:paddingStart="@dimen/padding_main_menu_sign_out_right"
        android:paddingEnd="@dimen/padding_main_menu_sign_out_right"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textLetterCount"
        android:textColor="@color/black"
        android:layout_alignBottom="@+id/textLetterCountLabel"
        android:layout_toEndOf="@+id/textLetterCountLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/how_many_letters_to_bet"
        android:id="@+id/textLabel"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="@dimen/padding_main_menu_sign_out_right"
        android:layout_marginRight="@dimen/padding_main_menu_sign_out_right"/>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textLabel"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/padding_word_table_side"
        android:layout_marginRight="@dimen/padding_word_table_side" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:textColor="@color/black"
        android:id="@+id/textCount"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCount"
        android:layout_centerHorizontal="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_facebook_dialogloginactivity_ok_button"
            android:id="@+id/buttonOK"
            android:gravity="center_horizontal"
            android:textAlignment="center" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_facebook_loginview_cancel_action"
            android:id="@+id/buttonCancel"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>